; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_iterator.c_git_iterator_for_workdir_ext.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_iterator.c_git_iterator_for_workdir_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@GIT_ITERATOR_OPTIONS_INIT = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@.str = private unnamed_addr constant [23 x i8] c"scan working directory\00", align 1
@GIT_EBAREREPO = common dso_local global i32 0, align 4
@GIT_ITERATOR_HONOR_IGNORES = common dso_local global i32 0, align 4
@GIT_ITERATOR_IGNORE_DOT_GIT = common dso_local global i32 0, align 4
@GIT_ITERATOR_TYPE_WORKDIR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_iterator_for_workdir_ext(i32** %0, i32* %1, i8* %2, i32* %3, i32* %4, %struct.TYPE_7__* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_7__*, align 8
  %14 = alloca %struct.TYPE_7__, align 4
  store i32** %0, i32*** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store %struct.TYPE_7__* %5, %struct.TYPE_7__** %13, align 8
  %15 = bitcast %struct.TYPE_7__* %14 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 bitcast (%struct.TYPE_7__* @GIT_ITERATOR_OPTIONS_INIT to i8*), i64 4, i1 false)
  %16 = load i8*, i8** %10, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %27, label %18

18:                                               ; preds = %6
  %19 = load i32*, i32** %9, align 8
  %20 = call i64 @git_repository__ensure_not_bare(i32* %19, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @GIT_EBAREREPO, align 4
  store i32 %23, i32* %7, align 4
  br label %47

24:                                               ; preds = %18
  %25 = load i32*, i32** %9, align 8
  %26 = call i8* @git_repository_workdir(i32* %25)
  store i8* %26, i8** %10, align 8
  br label %27

27:                                               ; preds = %24, %6
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %29 = icmp ne %struct.TYPE_7__* %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %27
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %32 = call i32 @memcpy(%struct.TYPE_7__* %14, %struct.TYPE_7__* %31, i32 4)
  br label %33

33:                                               ; preds = %30, %27
  %34 = load i32, i32* @GIT_ITERATOR_HONOR_IGNORES, align 4
  %35 = load i32, i32* @GIT_ITERATOR_IGNORE_DOT_GIT, align 4
  %36 = or i32 %34, %35
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = or i32 %38, %36
  store i32 %39, i32* %37, align 4
  %40 = load i32**, i32*** %8, align 8
  %41 = load i32*, i32** %9, align 8
  %42 = load i8*, i8** %10, align 8
  %43 = load i32*, i32** %11, align 8
  %44 = load i32*, i32** %12, align 8
  %45 = load i32, i32* @GIT_ITERATOR_TYPE_WORKDIR, align 4
  %46 = call i32 @iterator_for_filesystem(i32** %40, i32* %41, i8* %42, i32* %43, i32* %44, i32 %45, %struct.TYPE_7__* %14)
  store i32 %46, i32* %7, align 4
  br label %47

47:                                               ; preds = %33, %22
  %48 = load i32, i32* %7, align 4
  ret i32 %48
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @git_repository__ensure_not_bare(i32*, i8*) #2

declare dso_local i8* @git_repository_workdir(i32*) #2

declare dso_local i32 @memcpy(%struct.TYPE_7__*, %struct.TYPE_7__*, i32) #2

declare dso_local i32 @iterator_for_filesystem(i32**, i32*, i8*, i32*, i32*, i32, %struct.TYPE_7__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
